integration-tests/tests/__snapshots__/auto-discovery-stderr-posix.txt
node:internal/modules/run_main:104
    triggerUncaughtException(
    ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'vitest' imported from /private/var/folders/0w/kjy1_yhx2kn54tm162jr4xrm0000gn/T/custom-steiger-plugin/node_modules/@steiger/toolkit/dist/index.js
Did you mean to import "vitest/index.cjs"?
    at Object.getPackageJSONURL (node:internal/modules/package_json_reader:267:9)
    at packageResolve (node:internal/modules/esm/resolve:768:81)
    at moduleResolve (node:internal/modules/esm/resolve:854:18)
    at defaultResolve (node:internal/modules/esm/resolve:984:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:716:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:640:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:623:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:276:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:136:49) {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v23.6.1
